patches: Include "AddDefaultCharset UTF-8" in the config example.
Signed-off-by: Alex Henrie <alexhenrie24@gmail.com>
Signed-off-by: Alexandre Julliard <julliard@winehq.org>

--- a/patches/doc/vhost_source.conf
+++ b/patches/doc/vhost_source.conf
@@ -1,5 +1,6 @@
 <VirtualHost *:80>
   DocumentRoot /home/winehq/opt/source
+  AddDefaultCharset UTF-8
 
   ServerName source.example.com
   ServerAdmin winehq@example.com
