winetest: Fail tests units that spam the test report.
To not exceed the maximum report size, each test unit must print less
than 2.5KB of traces on average. So report tests that hog more than
10 times that.

Signed-off-by: Francois Gouget <fgouget@codeweavers.com>
Signed-off-by: Alexandre Julliard <julliard@winehq.org>

--- a/winetest/winetest.conf
+++ b/winetest/winetest.conf
@@ -17,6 +17,9 @@ $maxfailedtests = 50;
 # Whether to accept test results from Win9x / NT4 versions
 $acceptprediluvianwin = 0;
 
+# Maximum amount of traces for a test unit
+$maxunitsize = 32 * 1024;
+
 # Maximum size of the report file
 # This should be in line with programs\winetest\send.c
 $maxfilesize = 1.5 * 1024 * 1024;
